making the debug option a funtion that has immediate effect improving the screen to handle crlf and backspace fixing the handling of path and file with spaces in mother
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@290 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/button/win32.rc
+++ b/vmb/src/button/win32.rc
@@ -41,6 +41,7 @@ BEGIN
         BEGIN
             MENUITEM "&About",                      ID_HELP_ABOUT
             MENUITEM "&Help",                       ID_HELP
+            MENUITEM "&Configuration",              ID_HELP_CONFIGURATION
         END
         MENUITEM "Minimize",                    ID_MINIMIZE
     END
