--- a/vmb/src/mother/win32.rc
+++ b/vmb/src/mother/win32.rc
@@ -49,6 +49,8 @@ BEGIN
         POPUP "&Help"
         BEGIN
             MENUITEM "&About",                      ID_HELP_ABOUT
+            MENUITEM "&Help",                       ID_HELP
+            MENUITEM "&Configuration",              ID_HELP_CONFIGURATION
         END
         MENUITEM "&Minimize",                   ID_MINIMIZE
     END
