--- a/vmb/src/led/win32.rc
+++ b/vmb/src/led/win32.rc
@@ -121,7 +121,10 @@ BEGIN
     CONTROL         "",IDC_COLOR0,"Static",SS_BITMAP | SS_REALSIZEIMAGE,264,24,15,13,WS_EX_TRANSPARENT
     PUSHBUTTON      "Color ...",IDC_CBUTTON0,258,48,30,14
     EDITTEXT        IDC_NLEDS,78,67,16,14,ES_AUTOHSCROLL
-    LTEXT           "Number of LEDs",IDC_STATIC,7,68,53,8
+    RTEXT           "Number of LEDs",IDC_STATIC,0,69,63,8
+    CONTROL         "vertical",IDC_VERTICAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,125,71,39,10
+    EDITTEXT        IDC_LABEL,77,84,40,14,ES_AUTOHSCROLL
+    RTEXT           "Label",IDC_STATIC,34,86,29,8
 END
 
 
