--- a/vmb/src/button/win32.rc
+++ b/vmb/src/button/win32.rc
@@ -103,6 +103,8 @@ BEGIN
     CONTROL         "Pushbutton",IDC_PUSHBUTTON,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,49,70,10
     EDITTEXT        IDC_COLOR,67,60,68,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Choose ...",IDC_COLORCHOOSE,143,59,50,14
+    LTEXT           "Label",IDC_STATIC,7,78,18,8
+    EDITTEXT        IDC_LABEL,67,76,68,12,ES_AUTOHSCROLL
 END
 
 
