making file open seach cwd, program and config directory adding mmix as optional group to setup script
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@296 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/disk/disk.vcproj
+++ b/vmb/src/disk/disk.vcproj
@@ -73,6 +73,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -151,6 +152,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
