--- a/vmb/src/mmix/mmix.vcproj
+++ b/vmb/src/mmix/mmix.vcproj
@@ -75,6 +75,7 @@
 			<Tool
 				Name="VCManifestTool"
 				UseUnicodeResponseFiles="false"
+				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -154,6 +155,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="vmb.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -237,7 +239,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Tangle"
-					CommandLine="ctangle mmix-arith mmix-arith.c"
+					CommandLine="ctangle mmix-arith mmix-arith.c&#x0D;&#x0A;"
 					Outputs="mmix-arith.c"
 				/>
 			</FileConfiguration>
@@ -247,7 +249,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Tangle"
-					CommandLine="ctangle mmix-arith mmix-arith.c"
+					CommandLine="ctangle mmix-arith mmix-arith.c&#x0D;&#x0A;"
 					Outputs="mmix-arith.c"
 				/>
 			</FileConfiguration>
@@ -261,7 +263,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Tangle"
-					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c"
+					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c&#x0D;&#x0A;"
 					AdditionalDependencies="vmb.ch"
 					Outputs="mmix-vmb.c"
 				/>
@@ -272,7 +274,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Tangle"
-					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c"
+					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c&#x0D;&#x0A;"
 					AdditionalDependencies="vmb.ch"
 					Outputs="mmix-vmb.c"
 				/>
@@ -287,7 +289,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Tangle"
-					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c"
+					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c&#x0D;&#x0A;"
 					AdditionalDependencies="mmix-sim.w"
 					Outputs="mmix-vmb.c"
 				/>
@@ -298,7 +300,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Tangle"
-					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c"
+					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c&#x0D;&#x0A;"
 					AdditionalDependencies="mmix-sim.w"
 					Outputs="mmix-vmb.c"
 				/>
