removing small bugs that were introduced into Unix Code by the latest  WIN32 code
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@301 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -14,15 +14,16 @@ CFLAGS = -ggdb -O0 -D_REENTRANT -Wall
 #CFLAGS = -O3 -D_REENTRANT -Wall 
 
 UTILDIR = ../util
+OPTDIR = ../opt
 CC = gcc
-INCDIRS = -I$(UTILDIR)
-LIBS    = -L$(UTILDIR) -lm -lvmb -lpthread -lrt
+INCDIRS = -I $(UTILDIR) -I $(OPTDIR)
+LIBS    = -L $(UTILDIR) -lm -lvmb -lpthread -lrt
 
 
 all: .depend mmix gmmix mmixal mmoboot mmotype
 
 .depend:
-	gcc -MM *.c > .depend
+	gcc $(INCDIRS) -MM *.c > .depend
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
