adding the util subdirectory for build utilities
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@306 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -8,9 +8,9 @@ SUBDIRS  = util opt device mother\
            disk hostdisk led timer
 
 .PHONY: hardware $(SUBDIRS) clean
-     
+
 hardware: $(GENERICS) $(SUBDIRS)
-     
+
 $(SUBDIRS):
 	$(MAKE) -C $@
 
@@ -21,8 +21,13 @@ install:
 	done
 
 
+source.tgz:
+	(cd /tmp; rm -rf vmb; cvs -d :ext:ruckert@vmb.cvs.sourceforge.net:/cvsroot/vmb co -P vmb/src)
+	tar -czvf source.tgz -C /tmp --exclude-vcs  vmb/src
+	rm -rf /tmp/vmb
 
-     
+
+
 clean:
 	rm -f *.o *~ TAGS
 	for dir in $(SUBDIRS); do \
