--- a/vmb/src/serial/win32.rc
+++ b/vmb/src/serial/win32.rc
@@ -96,17 +96,24 @@ BEGIN
     CTEXT           "Copyright: Martin Ruckert, 2005",IDC_STATIC,23,59,147,12,SS_CENTERIMAGE
 END
 
-IDD_SETTINGS DIALOG  0, 0, 186, 95
+IDD_SETTINGS DIALOGEX 0, 0, 210, 127
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,55,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,74,50,14
-    EDITTEXT        IDC_ADDRESS,43,7,136,11,ES_AUTOHSCROLL
-    LTEXT           "Address",IDC_STATIC,7,7,26,8
-    EDITTEXT        IDC_INTERRUPT,43,21,136,11,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Interrupt",IDC_STATIC,7,21,27,8
+    DEFPUSHBUTTON   "OK",IDOK,153,87,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,153,107,50,14
+    EDITTEXT        IDC_ADDRESS,67,7,136,12,ES_AUTOHSCROLL
+    LTEXT           "Address",IDC_STATIC,7,9,26,8
+    EDITTEXT        IDC_RINTERRUPT,67,22,56,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Read Interrupt",IDC_STATIC,7,24,46,8
+    EDITTEXT        IDC_WINTERRUPT,67,37,56,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Write Interrupt",IDC_STATIC,7,39,46,8
+    CONTROL         "Enable",IDC_RENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,23,38,10
+    CONTROL         "Enable",IDC_WENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,38,38,10
+    CONTROL         "Buffered Input",IDC_BUFFERED,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,54,69,10
+    EDITTEXT        IDC_DEVICENAME,67,67,136,12,ES_AUTOHSCROLL
+    LTEXT           "Serial Device",IDC_STATIC,7,69,43,8
 END
 
 
@@ -129,9 +136,9 @@ BEGIN
     IDD_SETTINGS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 203
         TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        BOTTOMMARGIN, 120
     END
 END
 #endif    // APSTUDIO_INVOKED
