removed buf in winsock shutdown changed window title to defined name
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@312 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/serial/win32.rc
+++ b/vmb/src/serial/win32.rc
@@ -111,7 +111,7 @@ BEGIN
     LTEXT           "Write Interrupt",IDC_STATIC,7,39,46,8
     CONTROL         "Enable",IDC_RENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,23,38,10
     CONTROL         "Enable",IDC_WENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,38,38,10
-    CONTROL         "Buffered Input",IDC_BUFFERED,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,54,69,10
+    CONTROL         "Disable Buffering",IDC_BUFFERED,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,54,69,10
     EDITTEXT        IDC_DEVICENAME,67,67,136,12,ES_AUTOHSCROLL
     LTEXT           "Serial Device",IDC_STATIC,7,69,43,8
 END
