addind the install target to Makefiles
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@314 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/Makefile
+++ b/vmb/Makefile
@@ -15,6 +15,8 @@ install:
 	  $(MAKE) -C $$dir install; \
 	done
 
+source:
+	tar -cvzf src_1_2.tgz src/*/Makefile src/*/*.ico src/*/*.bmp src/*/*.c src/*/*.h src/*/*.vcproj src/*/*.sln src/*/*.rc
 
 
 www: wwwdoc
