--- a/vmb/src/screen/Makefile
+++ b/vmb/src/screen/Makefile
@@ -1,6 +1,9 @@
 PROG= screen
 UTILDIR = ../util
 OPTDIR = ../opt
+INSTALLDIR=../bin
+
+
 CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
 LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
@@ -16,8 +19,8 @@ utilities:
 $(PROG): $(PROG).c  utilities
 	$(CC) $(CFLAGS) $(PROG).c $(LDFLAGS) -o $(PROG)
 
-install:
-	install $(PROG) $(BINDIR)
+install: $(PROG)
+	install $(PROG) $(INSTALLDIR)
 
 clean:
 	rm -f $(PROG) *.o *~
