--- a/vmb/src/timer/Makefile
+++ b/vmb/src/timer/Makefile
@@ -1,6 +1,7 @@
 PROG= timer
 UTILDIR = ../util
 OPTDIR = ../opt
+INSTALLDIR=../bin
 
 CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
 LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
@@ -18,7 +19,7 @@ $(PROG): main.o timer.o  utilities
 	$(CC) $(CFLAGS)  main.o timer.o  $(LDFLAGS) -o $(PROG)
 
 install: all
-	install $(PROG) $(BINDIR)
+	install $(PROG) $(INSTALLDIR)
 
 clean:
 	rm -f $(PROG) *.o *~
