--- a/vmb/src/vram/Makefile
+++ b/vmb/src/vram/Makefile
@@ -1,7 +1,8 @@
 PROG= vram
 UTILDIR = ../util
 OPTDIR = ../opt
-UTILDIR = ../util
+INSTALLDIR=../bin
+
 CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR) -I/usr/X11R6/include
 LDFLAGS= -L/usr/X11R6/lib -lX11 -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
@@ -18,7 +19,7 @@ $(PROG): $(PROG).c utilities
 	$(CC) $(CFLAGS) $(PROG).c $(LDFLAGS) -o $(PROG)
 
 install: all
-	install $(PROG) $(BINDIR)
+	install $(PROG) $(INSTALLDIR)
 
 
 TAGS: *.c $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
