mmoimg initial win32
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@316 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/mmoimg.vcproj
+++ b/vmb/src/mmix/mmoimg.vcproj
@@ -24,6 +24,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="build mmoimg.c"
+				CommandLine="ctangle mmotype.w mmoimg.ch mmoimg.c"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
