--- a/vmb/src/mmix/mmoimg.vcproj
+++ b/vmb/src/mmix/mmoimg.vcproj
@@ -182,6 +182,10 @@
 				RelativePath=".\mmoimg.c"
 				>
 			</File>
+			<File
+				RelativePath=".\mmoimg.ch"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
