fixing project files
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@324 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/mmix.vcproj
+++ b/vmb/src/mmix/mmix.vcproj
@@ -231,6 +231,10 @@
 			>
 		</Filter>
 		<File
+			RelativePath=".\abstime.w"
+			>
+		</File>
+		<File
 			RelativePath=".\mmix-arith.w"
 			>
 			<FileConfiguration
