Intermediate commit: - MSP430 working directory moved to folder msp - Code refactoring (MSP430)
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@331 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/device/Makefile
+++ b/vmb/src/device/Makefile
@@ -1,4 +1,4 @@
-PROG= devicetemplate
+PROG= msp
 UTILDIR = ../util
 CFLAGS= -g -D_REENTRANT -Wall
 CC = gcc
@@ -10,8 +10,8 @@ utilities:
 	$(MAKE) -C  $(UTILDIR)
 
 
-$(PROG): $(PROG).c  maintemplate.c utilities
-	$(CC) $(CFLAGS) -I$(UTILDIR) maintemplate.c $(PROG).c  \
+$(PROG): $(PROG).c  mspmain.c utilities
+	$(CC) $(CFLAGS) -I$(UTILDIR) mspmain.c $(PROG).c  \
 	-L$(UTILDIR) -lvmb -lpthread -o $(PROG)
 
 install: all
