- VMB interface for MSP430 implemented - MSP430 fixed and refactored to meet the spec
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@332 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/device/msp.vcxproj
+++ b/vmb/src/device/msp.vcxproj
@@ -93,7 +93,7 @@
   <ItemGroup>
     <ClCompile Include="mspbus.c" />
     <ClCompile Include="mspcore.c" />
-    <ClCompile Include="mspdev.c" />
+    <ClCompile Include="mspdev.c.old" />
     <ClCompile Include="mspmain.c" />
   </ItemGroup>
   <ItemGroup>
