MSP430: Header files cleaned
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@333 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/device/msp.vcxproj
+++ b/vmb/src/device/msp.vcxproj
@@ -93,7 +93,9 @@
   <ItemGroup>
     <ClCompile Include="mspbus.c" />
     <ClCompile Include="mspcore.c" />
-    <ClCompile Include="mspdev.c.old" />
+    <ClCompile Include="mspdev.c.old">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="mspmain.c" />
   </ItemGroup>
   <ItemGroup>
