--- a/vmb/src/msp/msp.vcxproj.filters
+++ b/vmb/src/msp/msp.vcxproj.filters
@@ -7,12 +7,18 @@
     <ClCompile Include="mspbus.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mspoptions.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mspbus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="mspcore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mspshared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
