--- a/vmb/src/mspio/mspio.vcxproj.filters
+++ b/vmb/src/mspio/mspio.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="mspio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mspioshared.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
