--- a/vmb/src/msp/msp.vcxproj
+++ b/vmb/src/msp/msp.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="mspoptions.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="memcheck.h" />
     <ClInclude Include="mspbus.h" />
     <ClInclude Include="mspcore.h" />
     <ClInclude Include="mspshared.h" />
