--- a/vmb/src/msp/msp.vcxproj.filters
+++ b/vmb/src/msp/msp.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="mspshared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="memcheck.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
