--- a/vmb/src/mspmultiplier/mspmultiplier.vcxproj
+++ b/vmb/src/mspmultiplier/mspmultiplier.vcxproj
@@ -73,6 +73,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>..\opt;..\util;..\msp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
